# test

./: .gitignore  README.md  components.json  index.html  main.tsx  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/: index.css  root.tsx
app/components/: ClientOnly.tsx
app/components/chat/: Artifact.tsx  (+9 more)
app/routes/: _index.tsx
app/styles/: index.scss  variables.scss
app/utils/: shell.ts
backend/: .gitignore  Snowflake.py  config.py  main.py  pyproject.toml  schemas.py
backend/services/: agent_orchestrator.py  agent_run_store.py  cortex_chat_service.py  pty_service.py  snowflake_session_manager.py  stream_registry.py  tool_definitions.py  tool_executor.py
backend/stream/: data_stream.py
new-backend/: config.py  main.py  pyproject.toml  schemas.py
new-backend/config/: ignored_report_codes.json
new-backend/core/: integrations.py  report_memory.py  snowflake_auth.py  snowflake_runtime.py
new-backend/graph/: scai_workflow.py  state.py
new-backend/graph/nodes/: __init__.py  add_source_code.py  apply_schema_mapping.py  convert_code.py  execute_sql.py  finalize.py  helpers.py  human_review.py  init_project.py  self_heal.py  supervisor.py  validate.py
new-backend/scripts/: schema_conversion_teradata_to_snowflake.py
new-backend/services/: pty_service.py  snowflake_session.py  workflow_runner.py
new-backend/stream/: data_stream.py
plans/: db-migration-refactor.md  limit-editor-languages.md  merge-chat-ui-final.md  merge-chat-ui-simplified.md  merge-chat-ui.md  migration-from-cloudflare-to-fastapi.md  remove-preview-slider.md
(+37 files in other folders)
