[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.129.0",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "snowflake-connector-python>=3.18.0",
    "snowflake-snowpark-python>=1.41.0",
    "uvicorn[standard]>=0.40.0",
]
